--- a/style.styl
+++ b/style.styl
@@ -1,2 +1,17 @@
+html
+  height: 100%
+
 body
   background-color: red
+  height: 100%
+  margin: 0
+
+.overlay
+  width: 100%
+  height: 100%
+  position: absolute
+
+  &.w
+    background-image: linear-gradient(#fff, rgba(255, 255, 255, 0))
+  &.b
+    background-image: linear-gradient(left, #000, rgba(0, 0, 0, 0))
