--- a/style.styl
+++ b/style.styl
@@ -1,3 +1,6 @@
+*
+  box-sizing: border-box
+
 html
   height: 100%
   user-select: none
@@ -6,7 +9,7 @@ body
   background-color: red
   height: 100%
   margin: 0
-  padding-right: 20px
+  padding-right: 40px
 
 .overlays
   position: relative
@@ -23,9 +26,30 @@ body
   &.b
     background-image: linear-gradient(left, #000, rgba(0, 0, 0, 0))
 
+.wrap
+  width: 100%
+  height: 100%
+  position: relative
+
+.sidebar
+  padding-top: 40px
+  position: absolute
+  top: 0
+  right: 0
+  width: 40px
+  height: 100%
+
 .hue
   background-image: linear-gradient(hsla(0, 100%, 54%, 1),hsla(10, 100%, 54%, 1),hsla(20, 100%, 54%, 1),hsla(30, 100%, 54%, 1),hsla(40, 100%, 54%, 1),hsla(50, 100%, 54%, 1),hsla(60, 100%, 54%, 1),hsla(70, 100%, 54%, 1),hsla(80, 100%, 54%, 1),hsla(90, 100%, 54%, 1),hsla(100, 100%, 54%, 1),hsla(110, 100%, 54%, 1),hsla(120, 100%, 54%, 1),hsla(130, 100%, 54%, 1),hsla(140, 100%, 54%, 1),hsla(150, 100%, 54%, 1),hsla(160, 100%, 54%, 1),hsla(170, 100%, 54%, 1),hsla(180, 100%, 54%, 1),hsla(190, 100%, 54%, 1),hsla(200, 100%, 54%, 1),hsla(210, 100%, 54%, 1),hsla(220, 100%, 54%, 1),hsla(230, 100%, 54%, 1),hsla(240, 100%, 54%, 1),hsla(250, 100%, 54%, 1),hsla(260, 100%, 54%, 1),hsla(270, 100%, 54%, 1),hsla(280, 100%, 54%, 1),hsla(290, 100%, 54%, 1),hsla(300, 100%, 54%, 1),hsla(310, 100%, 54%, 1),hsla(320, 100%, 54%, 1),hsla(330, 100%, 54%, 1),hsla(340, 100%, 54%, 1),hsla(350, 100%, 54%, 1),hsla(360, 100%, 54%, 1))
   position: absolute
   right: 0
-  width: 20px
+  width: 40px
   height: 100%
+
+.swatch
+  width: 40px
+  height: 40px
+  border: 2px solid white
+  position: absolute
+  top: 0
+  right: 0
