:mailbox::e-mail: Updated in browser at strd6.github.io/editor

--- a/style.styl
+++ b/style.styl
@@ -22,7 +22,7 @@ body
   position: absolute
 
   &.w
-    background-image: linear-gradient(#fff, rgba(255, 255, 255, 0))
+    background-image: linear-gradient(bottom, #fff, rgba(255, 255, 255, 0))
   &.b
     background-image: linear-gradient(left, #000, rgba(0, 0, 0, 0))
 
